--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,50 +5,166 @@
 
 body {
   display: grid;
-  justify-items: flex-end;
-  align-items: flex-start;
+  grid-template-columns: 3fr 1fr;
+  justify-items: center;
+  align-items: center;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(180deg, #ead389, #cb9d30);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  color: white;
+.black {
+  background-color: #1b1b1b;
 }
 
-p {
+.gold {
+  background: linear-gradient(180deg, #ead389, #cb9d30);
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
+.info img {
+  width: 350px;
+  margin-left: 80px;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  align-content: space-around;
+  margin-top: 3em;
+  padding: 1em;
+}
+
+.menu h3 {
+  margin-bottom: 24px;
+}
+
+.menu p {
+  text-align: center;
+  opacity: 0.7;
+  margin-bottom: 40px;
+}
+
+#logo {
+  width: 160px;
+}
+
+.menu ul {
   color: white;
 }
 
 span {
   position: relative;
+  grid-column-start: 2;
   float: right;
-  margin-top: 4%;
-  margin-right: 5%;
+  margin-top: 2.8%;
+  margin-right: 3.2%;
   color: white;
-  transition: color 0.3s;
+  transition: opacity 0.3s;
 }
 
-section {
+.menu-wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: space-between;
   width: 350px;
   height: 100vh;
   padding: 1em;
   background-color: #1b1b1b;
+  border: 1px solid #ead389;
   clip-path: circle(5% at 90% 5%);
   transition: all 0.5s ease-in-out;
 }
 
-section:hover {
+.menu-wrapper:hover {
   clip-path: circle(75%);
   background-color: #1b1b1b;
 }
 
-section:hover span {
-  color: rgba(255, 255, 255, 0);
+.menu-wrapper:hover span {
+  opacity: 0;
+}
+
+.publication {
+  display: flex;
+  grid-column-start: 1;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.publication img {
+  width: 300px;
+  margin-bottom: 24px;
+}
+
+.publication h4 {
+  color: white;
+}
+
+.social {
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 40px 0px;
+}
+.icons {
+  width: 24px;
+}
+
+.icons:hover {
+  cursor: pointer;
+}
+
+a {
+  margin-bottom: 16px;
+  color: #ead389;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+h1,
+h3,
+p {
+  color: white;
+}
+
+#primary-title {
+  font-family: "Rubik", sans-serif;
+  font-weight: 700;
+  font-size: 80px;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+}
+
+#secondary-title {
+  margin-bottom: -8px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 16px;
+}
+
+#dialog {
+  font-family: "Amatic SC", cursive;
+  font-size: 40px;
 }
